apps/k8s-dashboard/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: k8s-dashboard
  labels:
    pod-security.kubernetes.io/enforce: privileged
