apps/k8s-dashboard/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-dashboard
  namespace: k8s-dashboard
spec:
  selector:
    app: k8s-dashboard
  ports:
    - port: 80
      targetPort: http
      name: http
